- Added smooth scroll - Fixes for main page background on Firefox

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -110,7 +110,7 @@ h3 {
 .intro {
     display: table;
     width: 100%;
-    min-height: 900px;
+    height: 900px;
     padding: 100px 0;
     text-align: center;
     color: #fff;
@@ -189,7 +189,7 @@ h3 {
 
 @media(min-width:768px) {
     .intro {
-        height: 100%;
+        height: 900px;
         padding: 0;
     }
 
